2008-08-26  David Schleef  <ds@schleef.org>

	* gst/gstutils.c: Remove check in gst_pad_query_convert() that
	  src_val must be positive, because that's not a requirement.
	  This causes problems with converting negative granulepos
	  values for Dirac.
	* gst/gstquery.c: Same, gst_query_new_convert().

2008-08-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstclock.c: (gst_clock_add_observation):
	Add some more debugging to the clock slaving code.

	* win32/common/libgstbase.def:
	Add new basetransform method.

2008-08-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbin.c: (gst_bin_element_set_state):
	Take the (recursive) state lock between getting the locked state of an
	element and changing the element state. This allows the application to
	lock an element's state and then change its state without races.

2008-08-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbin.c: (gst_bin_element_set_state):
	When an element is in the locked state we still want to update the
	base_time of the element.

2008-08-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_default_negotiate):
	Use the result from gst_pad_set_caps() instead of assuming the element
	always accepted the caps computed by the default negotiate function.

2008-08-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_handle_buffer), (gst_base_transform_getrange),
	(gst_base_transform_chain), (gst_base_transform_suggest),
	(gst_base_transform_reconfigure):
	* libs/gst/base/gstbasetransform.h:
	Implement method for reconfiguring basetransform.
	API: GstBaseTransform::gst_base_transform_reconfigure()

2008-08-20  Stefan Kost  <ensonic@users.sf.net>

	patch by: Murray Cumming <murrayc@murrayc.com>

	* gst/gstutils.c:
	  Mention that this is just like gst_buffer_merge() but with extra
	  unreffing for C coders. Advise language bindings not to wrap it.